<resources>
    <string name="app_name">Morse Code Ringer</string>
    <string name="text_setup">Morse Code Ringer Setup</string>
    <string name="text_api_info">Developer: KA4CDN. Version 2.1.1alpha</string>
    <string name="text_wpm">WPM:</string>
    <string name="text_tone">Tone:</string>
    <string name="text_test_msg">Test Msg:</string>
    <string name="text_preamble">Preamble:</string>
    <string name="edit_message">Test message</string>
    <string name="button_play">Play</string>
    <string name="button_save">Save</string>
    <string name="button_play_last">Play Last SMS Message</string>
    <string name="button_stop_last">Stop Last SMS Message</string>
    <string name="edit_preamble">Plays before message</string>
    <string name="edit_speed">Typically between 12 WPM to 75 WPM</string>
    <string name="edit_tone">Valid tones are 100 to 2000 hz.</string>
    <string name="button_set">Set</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">Action Search</string>
    <string name="announceRunning">Announce Running</string>
</resources>
