<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:paddingTop="200px"
        android:text="@string/text_setup"
        android:textSize="15pt" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20px"
        android:text="@string/text_api_info"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:paddingTop="20px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20px"
            android:text="@string/text_preamble" />

        <EditText
            android:id="@+id/edit_preamble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_preamble"
            android:paddingTop="20px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:paddingTop="20px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20px"
            android:text="@string/text_wpm" />

        <EditText android:id="@+id/edit_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20px"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/edit_speed" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:paddingTop="20px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20px"
            android:text="@string/text_tone" />

        <EditText android:id="@+id/edit_tone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20px"
            android:inputType="number"
            android:maxLength="4"
            android:hint="@string/edit_tone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:paddingTop="20px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20px"
            android:text="@string/text_test_msg" />

        <EditText android:id="@+id/edit_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20px"
            android:hint="@string/edit_message" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_play"
            android:paddingTop="20px"
            android:onClick="playMessage" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/announceRunning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/announceRunning" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_save"
        android:paddingTop="20px"
        android:onClick="saveSetting" />

</LinearLayout>
